@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.7 ]---------------
 
+2006-02-03  Erik Grinaker <erikg@codepoet.no>
+
+	* ignore errors when automatically reloading file in applet
+
 2006-02-02  Erik Grinaker <erikg@codepoet.no>
 
 	* added dependencies to README
